# architecture-sprint-8

./: .gitignore  docker-compose.yaml
API/: Dockerfile  pyproject.toml
API/app/: main.py
frontend/src/: App.tsx
